@@ -1,5 +1,8 @@
 lilv (0.22.1) unstable;
 
+  * Add lilv_state_set_metadata() for adding state banks/comments/etc
+    (based on patch from Hanspeter Portner)
+  * Fix crash when state contains non-POD properties
   * Fix state file versioning
   * Unload contained resources when bundle is unloaded
   * Do not instantiate plugin when data fails to parse
@@ -13,7 +16,7 @@ lilv (0.22.1) unstable;
   * Fix documentation installation
   * Fix outdated comment references to lilv_uri_to_path()
 
- -- David Robillard <d@drobilla.net>  Tue, 12 Jul 2016 21:22:40 -0400
+ -- David Robillard <d@drobilla.net>  Sun, 24 Jul 2016 19:16:57 -0400
 
 lilv (0.22.0) stable;
 
